cluster/archive/private-website/private-website-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: private-website
  namespace: selfhosted
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: private-website
