cluster/archive/private-website/private-website-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: private-website
  namespace: selfhosted
  annotations: {}
spec:
  rules:
    - host: &host "${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: private-website
                port:
                  number: 80
    - host: &host "www.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: private-website
                port:
                  number: 80
  tls:
    - hosts:
        - *host
